--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@ body {
   body img {
     width: 250px;
     display: block;
-    margin: auto; }
+    margin: auto;
+    margin-top: 50px; }
   body a {
     text-decoration: none;
     color: white; }
